--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "emoji-picker-react": "^4.12.0",
     "express": "^4.21.1",
     "konva": "^9.3.16",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
